tests/ui/assumptions_on_binders/placeholder-assumptions-issue-157840.stderr
error[E0275]: overflow evaluating the requirement `(): Trait<<T as Proj<'a>>::Assoc>`
  --> $DIR/placeholder-assumptions-issue-157840.rs:12:9
   |
LL |     (): Trait<<T as Proj<'a>>::Assoc>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`placeholder_assumptions_issue_157840`)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
